Fix text overflow issue in heroInputContainer

--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@
     border-radius: 10px;
     outline: none;      
     border:none;
-
+    overflow: hidden;
+    text-overflow: clip;
     background-color: white;
 }
 .inputRestrauntSelectContainer{
@@ -100,6 +101,8 @@
     padding: 10px;
     border-radius: 10px;
     background-color: white;
+    overflow: hidden;
+    text-overflow: clip;
     
 }
 input{
@@ -171,9 +174,10 @@ input{
     .heroSection{
         height: 100vh;
     }
-    .ServicesOfferedContainer{
+    .ServicesOfferedContainer {
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
+        align-items: center;
     }
     .collectionsContainer{
         display: flex;
